--- a/ref_manu2.bib
+++ b/ref_manu2.bib
@@ -1,4 +1,20 @@
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+@article{brunsdon1996,
+	author = {Brunsdon, Chris and Fotheringham, A. Stewart and Charlton, Martin E.},
+	title = {Geographically Weighted Regression: A Method for Exploring Spatial Nonstationarity},
+	journal = {Geographical Analysis},
+	volume = {28},
+	number = {4},
+	pages = {281-298},
+	doi = {https://doi.org/10.1111/j.1538-4632.1996.tb00936.x},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1538-4632.1996.tb00936.x},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1538-4632.1996.tb00936.x},
+	abstract = {Spatial nonstationarity is a condition in which a simple “global” model cannot explain the relationships between some sets of variables. The nature of the model must alter over space to reflect the structure within the data. In this paper, a technique is developed, termed geographically weighted regression, which attempts to capture this variation by calibrating a multiple regression model which allows different relationships to exist at different points in space. This technique is loosely based on kernel regression. The method itself is introduced and related issues such as the choice of a spatial weighting function are discussed. Following this, a series of related statistical tests are considered which can be described generally as tests for spatial nonstationarity. Using Monte Carlo methods, techniques are proposed for investigating the null hypothesis that the data may be described by a global model rather than a non-stationary one and also for testing whether individual regression coefficients are stable over geographic space. These techniques are demonstrated on a data set from the 1991 U.K. census relating car ownership rates to social class and male unemployment. The paper concludes by discussing ways in which the technique can be extended.},
+	year = {1996}
+}
+
+
+% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 @article{fotheringham2002geographically,
   title={Geographically weighted regression: the analysis of spatially varying relationships},
   author={Fotheringham, AS},
@@ -265,6 +281,25 @@
 	publisher={Taylor \& Francis}
 }
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+@article{mgwr_book_2017,
+	author = {A. Stewart Fotheringham and Wenbai Yang and Wei Kang},
+	title = {Multiscale Geographically Weighted Regression (MGWR)},
+	journal = {Annals of the American Association of Geographers},
+	volume = {107},
+	number = {6},
+	pages = {1247--1265},
+	year = {2017},
+	publisher = {Taylor \& Francis},
+	doi = {10.1080/24694452.2017.1352480},
+	URL = { 
+	https://doi.org/10.1080/24694452.2017.1352480
+	},
+	eprint = { 
+	https://doi.org/10.1080/24694452.2017.1352480	
+	}
+	,
+	abstract = { Scale is a fundamental geographic concept, and a substantial literature exists discussing the various roles that scale plays in different geographical contexts. Relatively little work exists, though, that provides a means of measuring the geographic scale over which different processes operate. Here we demonstrate how geographically weighted regression (GWR) can be adapted to provide such measures. GWR explores the potential spatial nonstationarity of relationships and provides a measure of the spatial scale at which processes operate through the determination of an optimal bandwidth. Classical GWR assumes that all of the processes being modeled operate at the same spatial scale, however. The work here relaxes this assumption by allowing different processes to operate at different spatial scales. This is achieved by deriving an optimal bandwidth vector in which each element indicates the spatial scale at which a particular process takes place. This new version of GWR is termed multiscale geographically weighted regression (MGWR), which is similar in intent to Bayesian nonseparable spatially varying coefficients (SVC) models, although potentially providing a more flexible and scalable framework in which to examine multiscale processes. Model calibration and bandwidth vector selection in MGWR are conducted using a back-fitting algorithm. We compare the performance of GWR and MGWR by applying both frameworks to two simulated data sets with known properties and to an empirical data set on Irish famine. Results indicate that MGWR not only is superior in replicating parameter surfaces with different levels of spatial heterogeneity but provides valuable information on the scale at which different processes operate. }
+}
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
