--- a/sections/studyarea001.tex
+++ b/sections/studyarea001.tex
@@ -12,8 +12,8 @@ The hydrogeological structures of the study area are divided into three sections
 	% Left large subfigure (A) - takes up left half, full height
 	\begin{subfigure}[b]{0.48\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{figures/studyarea_dpi150.png}
-%		\framebox{\rule{0pt}{10cm}\rule{\textwidth}{0pt}}
+%		\includegraphics[width=\textwidth]{figures/studyarea_dpi150.png}
+		\framebox{\rule{0pt}{10cm}\rule{\textwidth}{0pt}}
 %		\caption{}
 		\label{fig:studyarea_a}
 	\end{subfigure}
@@ -23,23 +23,24 @@ The hydrogeological structures of the study area are divided into three sections
 		% Top right subfigure (B)
 		\begin{subfigure}[b]{\textwidth}
 			\centering
-			\includegraphics[width=\textwidth]{figures/crosssection.png}
-%			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
+%			\includegraphics[width=\textwidth]{figures/crossection_new_lowres.jpg}
+			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
 %			\caption{}
 			\label{fig:studyarea_b}
 		\end{subfigure}
 		
-		\vspace{0.1cm}
+		\vspace{0.05cm}
 		
 		% Middle right subfigure (C)
 		\begin{subfigure}[b]{\textwidth}
 			\centering
+%			\includegraphics[width=\textwidth]{figures/legend_new_lowres.png}
 			\framebox{\rule{0pt}{3cm}\rule{\textwidth}{0pt}}
 %			\caption{}
 			\label{fig:studyarea_c}
 		\end{subfigure}
 		
-		\vspace{0.1cm}
+		\vspace{0.05cm}
 		
 		% Bottom right subfigure (D)
 		\begin{subfigure}[b]{\textwidth}
