2025-07-30 enhance writing of Study Area

--- a/sections/studyarea001.tex
+++ b/sections/studyarea001.tex
@@ -1,10 +1,18 @@
 %\section{Study Area Background}
 %\label{subsec:study_area}
 
+The selected study area is the Choushui River Fluvial Plain (CRFP), located in the western region of central Taiwan. It covers approximately 2000 \text{$\mathrm{km}^2$} and overlaps with the administrative areas of Changhua and Yunlin counties. The fluvial plain is bounded to the east by the Douliu Hills and the Bagua Tableland, where the altitude is around 100 to 150 m, and decreases quickly to several meters above sea level at the Taiwan Strait to the west. The northern and southern boundaries are marked by the Wu River and the Beigang River, respectively (Figure \ref{fig:studyarea}).
+
+The sedimentary materials in the CRFP result from the mechanical weathering of rock formations in the upstream watershed, including slate, quartzite, shale, sandstone, and mudstone \citep{RN17, RN47}. Based on hydrogeological characteristics, the fluvial plain is divided into three sections, namely proximal, middle, and distal fans \citep{RN46}. The proximal fan, close to the hills, is mainly composed of highly permeable materials such as gravel and coarse sand. Towards the middle and distal fans, the material becomes a mix of coarse and fine grains, leading to low permeability. This is evident in the hydrogeological profile ($\text{A--A'}$), which runs parallel to the Choushui River (Figure \ref{fig:crosssection}). This profile was conceptually constructed by the Geological Survey and Mining Management Agency (GSMMA) of Taiwan based on borehole logging from the Haifeng site on the west to the Chukou site on the east.
+
+As an essential agricultural region accounting for approximately 35\% of Taiwan's total rice production, alongside other primary food crops like maize, peanuts, wheat, and onions, the CRFP's annual groundwater extraction is estimated to range from 1.71 to 2.05 billion \text{$\mathrm{m}^3/\mathrm{year}$} \citet{craf_pumping}. The demand for this groundwater frequently peaks in the first half of the year to meet the high water requirements of the initial rice sowing stage—from mid-February to late March—which coincides with the region's dry season, typically lasting from November to April \citet{RN64}. Spatially, this intensive extraction is concentrated in the middle and distal fans, creating zones of high pumping that coincide with the region's primary subsidence bowls. Although significant pumping also occurs in the proximal fan, subsidence magnitude is negligible because of the presence of highly permeable materials.
 
 
-The CRFP belongs to the western coastal region of central Taiwan. CRFP has an area of approximately 2000 $km^2$, which belongs to the regions of Changhua, Yunlin, and the northern part of the Chiayi counties, with a surface elevation ranging from 0 m to 100 – 150 m above sea level. The CRFP boundary is shaped by Douliu Hill and Bagua Tableland on the eastern side, the Wu River to the north, the Beigang River to the south, and the Taiwan Strait to the west (Figure \ref{fig:studyarea}).
-The hydrogeological structures of the study area are divided into three sections from the east to the west, namely proximal fan, middle fan, and distal fan \citep{RN46}. Each section was comprised of various sedimentary materials, with the average grain sizes decreasing from hilly regions to coastal areas. The sedimentary materials in the CRFP are divided into four primary groups, grading from very coarse grains to very fine grains: gravel, coarse sand, fine sand, and clay or silt \citep{RN46}. These materials are weathered products of rock formations located in the upstream watershed of the study area, such as slate, quartzite, shale, sandstone, and mudstone \citep{RN17, RN47}. The borehole profiles suggest that gravel and coarse sand are primarily present at the proximal fan and part of the middle fan, whereas the distal fan mainly witnesses fine-grain materials, including fine sand, clay, and silt (Figure \ref{fig:crosssection}).
+
+
+
+%The CRFP belongs to the western coastal region of central Taiwan. CRFP has an area of approximately 2000 $km^2$, which belongs to the regions of Changhua, Yunlin, and the northern part of the Chiayi counties, with a surface elevation ranging from 0 m to 100 – 150 m above sea level. The CRFP boundary is shaped by Douliu Hill and Bagua Tableland on the eastern side, the Wu River to the north, the Beigang River to the south, and the Taiwan Strait to the west (Figure \ref{fig:studyarea}).
+%The hydrogeological structures of the study area are divided into three sections from the east to the west, namely proximal fan, middle fan, and distal fan \citep{RN46}. Each section was comprised of various sedimentary materials, with the average grain sizes decreasing from hilly regions to coastal areas. The sedimentary materials in the CRFP are divided into four primary groups, grading from very coarse grains to very fine grains: gravel, coarse sand, fine sand, and clay or silt \citep{RN46}. These materials are weathered products of rock formations located in the upstream watershed of the study area, such as slate, quartzite, shale, sandstone, and mudstone \citep{RN17, RN47}. The borehole profiles suggest that gravel and coarse sand are primarily present at the proximal fan and part of the middle fan, whereas the distal fan mainly witnesses fine-grain materials, including fine sand, clay, and silt (Figure \ref{fig:crosssection}).
 
 % ================================================================================
 
