--- a/ref_manu2.bib
+++ b/ref_manu2.bib
@@ -125,6 +125,25 @@
 	type = {Journal Article}
 }
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+@article{RN64,
+	author = {Chang, Lena and Chen, Yi-Ting and Wang, Jung-Hua and Chang, Yang-Lang},
+	title = {Rice-Field Mapping with Sentinel-1A SAR Time-Series Data},
+	journal = {Remote Sensing},
+	volume = {13},
+	number = {1},
+	pages = {103},
+	keywords = {synthetic aperture radar
+	Sentinel-1A
+	rice detection
+	time-series data
+	rice growth-related features},
+	ISSN = {2072-4292},
+	DOI = {10.3390/rs13010103},
+	url = { https://doi.org/10.3390/rs13010103},
+	year = {2020},
+	type = {Journal Article}
+}
+% - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 @book{hanssen_book,
 	author = {Hanssen, Ramon F.},
 	title = {Radar Interferometry: Data Interpretation and Error Analysis},
@@ -301,6 +320,19 @@
 	abstract = { Scale is a fundamental geographic concept, and a substantial literature exists discussing the various roles that scale plays in different geographical contexts. Relatively little work exists, though, that provides a means of measuring the geographic scale over which different processes operate. Here we demonstrate how geographically weighted regression (GWR) can be adapted to provide such measures. GWR explores the potential spatial nonstationarity of relationships and provides a measure of the spatial scale at which processes operate through the determination of an optimal bandwidth. Classical GWR assumes that all of the processes being modeled operate at the same spatial scale, however. The work here relaxes this assumption by allowing different processes to operate at different spatial scales. This is achieved by deriving an optimal bandwidth vector in which each element indicates the spatial scale at which a particular process takes place. This new version of GWR is termed multiscale geographically weighted regression (MGWR), which is similar in intent to Bayesian nonseparable spatially varying coefficients (SVC) models, although potentially providing a more flexible and scalable framework in which to examine multiscale processes. Model calibration and bandwidth vector selection in MGWR are conducted using a back-fitting algorithm. We compare the performance of GWR and MGWR by applying both frameworks to two simulated data sets with known properties and to an empirical data set on Irish famine. Results indicate that MGWR not only is superior in replicating parameter surfaces with different levels of spatial heterogeneity but provides valuable information on the scale at which different processes operate. }
 }
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
+@article{craf_pumping,
+	title = {Estimating spatiotemporal pumping amounts using multiple signal decomposition methods},
+	journal = {Journal of Hydrology},
+	volume = {633},
+	pages = {130856},
+	year = {2024},
+	issn = {0022-1694},
+	doi = {https://doi.org/10.1016/j.jhydrol.2024.130856},
+	url = {https://www.sciencedirect.com/science/article/pii/S0022169424002506},
+	author = {Hua-Ting Tseng and Ying-Fan Lin and Hwa-Lung Yu},
+	keywords = {Pumping amount estimation, Hilbert Huang transform, Ensemble empirical mode decomposition, Hilbert spectral analysis, Empirical orthogonal function},
+	abstract = {Effective water resource management requires accurate estimation of the volume of water withdrawn through anthropogenic groundwater pumping. However, insufficient pumping information makes accurate estimation difficult. To address this issue, this study proposes a novel method for estimating pumping volumes that does not rely on pumping information. The proposed method uses high-resolution groundwater level (GWL) data from densely monitored wells and integrates Hilbert–Huang transform and empirical orthogonal function analysis to extract pump-associated signals, which can then be used to estimate total pumping. Our method was validated by analyzing GWL data from monitoring stations on the Choshui River alluvial fan in Taiwan. The results indicate the estimated pumping amount of 1.71×109 – 2.05×109 m3/year consistent with previous estimates obtained using survey and physics-based methods ranging from 9×108 m3/year to 2.2×109 m3/year. In the areas with abundant groundwater head observations, the proposed method can efficiently estimate pumping rates with a high space–time resolution, and may serve as a useful reference for groundwater management.}
+}
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
 % - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - 
