--- a/main.tex
+++ b/main.tex
@@ -149,7 +149,8 @@ Land subsidence from excessive groundwater extraction has long affected the Chou
 \label{sec:dataset}
 \input{sections/dataset001}
 
-\section{Methodology}
+%\section{Methodology}
+\section{Geographically Temporally Weighted Regression}
 \label{sec:method}
 
 \input{sections/methods001}
